# comtails

./: .gitignore  README.md  app_runner.py  config.py  constants.py  main.py  simulation.py
benchmarks/: README.md  stage1_profile.py
comtails_core/: CMakeLists.txt  README.md  parity_dataset.csv
comtails_core/include/: comtails_core.h
comtails_core/src/: core_cpu.cpp
comtails_core/tests/: test_core_cpu.cpp
comtails_core/tools/: benchmark_monte_carlo.cpp  benchmark_parity_dataset.cpp  check_parity_regression.cpp  run_synthetic_tail.cpp
docs/: AUTHORS_RU.md  calculations_rewrite_plan_ru.md  development_environment_ru.md  how_to_run_cpp_ru.md  project_status_ru.md  runtime_fix_ru.md  versions_ru.md
fits/: fits_writer.py
horizons/: horizons_client.py
models/: comet.py  dust_tail.py
orbital/: heliorbit.py  orbit_solver.py
scripts/: plot_results_ru.py  run_cpp_pipeline.sh  verify_project.sh
utils/: coordinate_transforms.py  date_time.py  io_utils.py  numerical.py  version.py
visualization/: gui_launcher.py  plot_handler.py  result_menu.py  star_field.py
